get everything centered and looking more pretty and a cool button

--- a/style.css
+++ b/style.css
@@ -20,7 +20,83 @@ p {
 }
 
 img {
-    max-width: 200px;
+    max-width: auto;
+    max-height: 400px;
+    margin:auto 0 ;
+}
+
+header {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    padding: 20px;
+    width: 350px;
     height: auto;
-    margin-left: 100px;
+    background-color: rgb(46, 101, 173);
+    text-align: center;
+}
+
+
+.intro{
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    padding: 20px;
+    width: 450px;
+    height: auto;
+    background-color: rgb(46, 101, 173);
+    text-align: center;
+}
+
+
+.jazz-styles {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    padding: 20px;
+    width: 450px;
+    height: auto;
+    line-height: 30px;
+    background-color: rgb(46, 101, 173);
+}
+
+.jazz-players {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+    padding: 20px;
+    width: 450px;
+    height: auto;
+    line-height: 30px;
+    background-color: rgb(46, 101, 173);
+}
+
+.photos {
+    margin: auto 0;
+    padding: 20px;
+    height: auto;
+    background-color: rgb(46, 101, 173);
+    text-align: center;
+}
+
+.my-button {
+    display: inline-block;
+    width: auto;
+    
+    
+}
+
+#take-quiz {
+    text-align: cetner;
+    background-color: darkslateblue;
+    width: 200px;
+    height: 100px;
+}
+
+#take-quiz:hover {
+    cursor: pointer;
+    background-color: green;
+    width: 210px;
+    height: 110px;
+    
 }
