--- a/style.css
+++ b/style.css
@@ -25,7 +25,8 @@ p {
 img {
     max-width: auto;
     max-height: 400px;
-    margin:auto 0 ;
+    margin:auto 0;
+    box-shadow: 0px 5px 10px 15px black;
 }
 
 header {
@@ -85,7 +86,7 @@ header {
 .my-button {
     display: inline-block;
     width: auto;
-    
+    box-shadow: 5px 5px 7px 7px black;
     
 }
 
@@ -105,5 +106,6 @@ header {
 
 #results {
     font-size: 40px;
-    color: orange;
+    color: rgb(249, 241, 228);
+    box-shadow: 5px 5px 5px 5px black;
 }
